# app/Models/UserPreference.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class UserPreference extends Model
+{
+    protected $fillable = [
+        'user_id',
+        'sources',
+        'categories',
+        'authors',
+    ];
+
+    protected $casts = [
+        'sources' => 'array',
+        'categories' => 'array',
+        'authors' => 'array',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+} 
